Add Figma file backup notes

--- a/product/ux/product-designer/index.html.md.erb
+++ b/product/ux/product-designer/index.html.md.erb
@@ -435,6 +435,10 @@ Figma has four levels of access, also called Permissions, for Professional teams
 
 [View complete permission details](https://help.figma.com/hc/en-us/articles/360039970673-Viewer-Editor-and-Admin-team-permissions)
 
+#### File backup
+
+Figma's cloud storage contains all design files under our Organization account and only the Pajamas UI Kit files are published to our [GitLab Product Design](https://www.figma.com/@gitlabdesign) community page and available publicly. It's recommended that you back up any non-confidential design files you'd like to have a record of for future reference or portfolio use by saving a .fig file and storing via your preferred method.
+
 [ux-guide]: https://docs.gitlab.com/ee/development/ux_guide/
 [gitlab-design-project-contribution-guidelines]: https://gitlab.com/gitlab-org/gitlab-design/blob/master/CONTRIBUTING.md
 [twitter-sheet]: https://docs.google.com/spreadsheets/d/1GDAUNujD1-eRYxAj4FIYbCyy8ltCwwIWqVTd9-gf4wA/edit
