Remove team member

--- a/quality/quality-engineering/dev-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/dev-qe-team/index.html.md.erb
@@ -98,7 +98,7 @@ Quality Engineering Manager: Ramya Authappan
 
 | S.No 	| Stage     	| Group                    	| SET Counterpart                                                      	|
 |------	|-----------	|--------------------------	|---------------------------------------------------------------------	|
-| 1    	| Analytics    	| [Product Analytics]       | Sean Gregory                                                          |
+| 1    	| Analytics    	| [Product Analytics]       | TBD                                                                   |
 | 2     | Analytics     | [Product Intelligence]    | -                                                                     |
 
 ### Quality Performance Indicators for Analytics Section
