Fix wording of eng on-call process outline note

--- a/development/processes/Infra-Dev-Escalation/process.html.md.erb
+++ b/development/processes/Infra-Dev-Escalation/process.html.md.erb
@@ -71,7 +71,7 @@ The expectation for the development engineers is to be a technical consultant an
 
 ### Process Outline
 
-**NOTE:** On-call engineer need not announce beginning/end of their shift in [#dev-escalation](https://gitlab.slack.com/messages/CLKLMSUR4) unless there is an active incident happening (check the chat history of the channel to know if there is an active incident). This is because many engineers have very noisy notifications enabled for that channel, and such announcements are essentially false positives which make them check the channel unnecessarily.
+**NOTE:** On-call engineer do not need to announce the beginning and end of their shift in [#dev-escalation](https://gitlab.slack.com/messages/CLKLMSUR4) unless there is an active incident happening (check the chat history of the channel to know if there is an active incident). This is because many engineers have very noisy notifications enabled for that channel, and such announcements are essentially false positives which make them check the channel unnecessarily.
 
 #### Weekdays (UTC)
 
