--- a/product/ux/stage-group-ux-strategy/ci-cd/index.html.md.erb
+++ b/product/ux/stage-group-ux-strategy/ci-cd/index.html.md.erb
@@ -11,54 +11,71 @@ description: "The CI/CD UX team works to ensure the best experience for users of
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-| **Meet our team** | [Team page](/company/team/?department=ci-cd-ux-team) |
+## Hello!
+
+Welcome to the GitLab CI/CD UX team handbook page. We're comprised of three stage groups that support designing and building the GitLab DevOps product: [Verify](/direction/ops/#verify), [Package](/direction/ops/#package), [Deploy](/direction/ops/#deploy), and [SaaS Platforms](/direction/saas-platforms/dedicated/) stages.
+
+### Who We Are
+
 | **GitLab.com** | [`@gitlab-com/gitlab-ux/cicd-ux`](https://gitlab.com/gitlab-org/ci-cd-ux) |
 | **Slack channel** | [`#ux_ci-cd`](https://gitlab.slack.com/app_redirect?channel=ux_ci-cd) (_internal only_)|
 | **Youtube playlists** | [CI/CD UX - Team Meetings](https://www.youtube.com/watch?v=ViEs54I5lHE&list=PL05JrBw4t0Kpap0GkV0SSuGnPhCM8jrAv) |
 | |  [CI/CD UX Team - Design Reviews](https://www.youtube.com/watch?v=AYO97sRry4E&list=PL05JrBw4t0Kpnb8RDztlfpryAYip1OMwb) | 
 | **Ops Section page** | [Ops handbook](/handbook/product/categories/#ops-section) | 
 
-## Hello!
+### Vision
 
-Welcome to the GitLab CI/CD UX team handbok page. We're comprised of three stage groups that support designing and building the GitLab DevOps product: [Verify](/direction/ops/#verify), [Package](/direction/ops/#package), and [Release](/direction/ops/#release).
+Our mission is to design and create simple, clean ways to make GitLab the tool of choice for deploying software where, when, and how users want. 
 
-We design create simple, clean ways to make GitLab the tool of choice for deploying where, when, and how users want. We work to ensure the best experience for users of all knowledge levels, allowing them to successfully apply the continuous methods (Continuous Integration, Delivery, and Deployment) to their software with no third-party application or integration needed.
+Our design team works to ensure the best experience for users of all knowledge levels, allowing them to successfully apply the continuous methods (Continuous Integration, Delivery, and Deployment) to their software with no third-party application or integration needed.
 
-Learn more about how each of the CI/CD UX stages work:
+### Structure
 
-* [Verify UX](/handbook/product/ux/stage-group-ux-strategy/verify/)
-* [Release UX](/handbook/product/ux/stage-group-ux-strategy/release/)
-* [Package UX](/handbook/product/ux/stage-group-ux-strategy/package/)
-* [Runner UX](/handbook/product/ux/stage-group-ux-strategy/ci-cd/runner/)
+#### Verify
+  
+TBA
+  
+#### Package 
+  
+TBA
+  
+#### Deploy
+  
+TBA
+  
+#### Switchboard
+  
+TBA
 
-### Our strategy
+## Strategy
 
-Our team significantly contributes to the [UX Department direction for FY23](/handbook/product/ux/#fy23-direction) and [Ops Product Section Direction](/direction/ops/) in the following ways:
 
-1. System Usability
-  * [Improve the usability of CI/CD](https://gitlab.com/groups/gitlab-org/-/epics/6929)
-1. User Experience
-  * [Document the user-validated Jobs to be Done](https://gitlab.com/groups/gitlab-org/-/epics/6931) for every actively maturing product category.
-  * Ensure that we have confidence that a proposed solution will meet the user's needs and expectations by [proactively performing solution validation](https://gitlab.com/groups/gitlab-org/-/epics/6178).
-  * Evaluate the user experience of various tasks and flows through UX Scorecards to make sure we are tracking progress and improvements over time.
-        * [UX Scorecards - Verify:Pipeline Authoring](https://gitlab.com/groups/gitlab-org/-/epics/6891)
-        * [UX Scorecards - Verify:Pipeline Execution](https://gitlab.com/groups/gitlab-org/-/epics/6890)
-        * [UX Scorecards - Verify:Runner](https://gitlab.com/groups/gitlab-org/-/epics/6889)
-        * [UX Scorecards - Verify:Pipeline Security](https://gitlab.com/groups/gitlab-org/-/epics/6893)
-        * [UX Scorecards - Package](https://gitlab.com/groups/gitlab-org/-/epics/6892)
-        * [UX Scorecards - Release](https://gitlab.com/groups/gitlab-org/-/epics/6776)
-1. Analytical leadership
-  * Engage with Product Managers and Group Product Managers on direction items.
+Our product design team is working to uncover customers' core needs and streamlining their workflows by being the conversation drivers with product managers, developers and other counterparts across stage groups.
+We contribute to the [UX Department Direction](/handbook/product/ux), [Ops Product Section Direction](/direction/ops/) and [SaaS Platforms Direction](/direction/saas-platforms/) in the following ways:
+
+TBA
+
+### Understanding Our Users
+
+Different user types are considered in our experience design effort. Even when a user has the same title, their responsibilities may vary by organization size, department, organization structure, and role. Some of the people we are serving are:
+
+- [Software Developer](/handbook/product/personas/#sasha-software-developer)
+- [Development Tech Lead](/handbook/product/personas/#delaney-development-team-lead) 
+- [DevOps Engineer](/handbook/product/personas/)
+- [Product Designer](/handbook/product/personas/#presley-product-designer)
+- QA
+
+### Strategic counterparts
+
+TBA
+
+## Measuring Results
 
 ### OKRs
 
-* Current quarter: [FY23-Q2](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1978)
-* Previous quarters
-    * [FY23-Q1](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1841)
-    * [FY22-Q4](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1756), [FY22-Q3](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1660), [FY22-Q2](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1603), [FY22-Q1](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1501)
-    * [FY21-Q1](https://gitlab.com/gitlab-org/gitlab-design/-/issues/925), [FY21-Q2](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1179), [FY21-Q3](https://gitlab.com/gitlab-org/ci-cd-ux/-/issues/13), [FY21-Q4](https://gitlab.com/gitlab-org/ci-cd-ux/-/issues/22) 
+TBA
 
-### Performance indicators
+### Performance Indicators
 
 #### UX Debt in CI/CD
 
@@ -66,11 +83,11 @@ Our team significantly contributes to the [UX Department direction for FY23](/ha
 
 ## How we work
 
-### Onboarding
+### Team Onboarding
 
-Coming soon.
+- _Coming soon_
 
-### Workflow
+### Workflows
 
 We follow the workflows outlined in the [UX section](/handbook/product/ux/how-we-work/) of the handbook. In addition, we do the following:
 
@@ -81,22 +98,9 @@ We follow the workflows outlined in the [UX section](/handbook/product/ux/how-we
 * Perform synchronous and asyncrhonous [design reviews](/handbook/product/ux/ux-resources/#synchronous-design-reviews).
     * [Watch our syncrhonous design reviews on Youtube](https://www.youtube.com/watch?v=AYO97sRry4E&list=PL05JrBw4t0Kpnb8RDztlfpryAYip1OMwb)
 
-### Team meetings
+### Recurring Meetings
 
 Our team meets every two weeks to discuss our work, processes, talk about user research activities, share knowledge, and raise questions to each other. We are also using session for team retrospectives, as well as sharing useful resources around design and DevOps domains. You can watch the [CI/CD UX Team Meeting videos](https://www.youtube.com/playlist?list=PL05JrBw4t0KqkrzZyJrJSEWNyiL_5x7an) on Unfiltered.
-
-### This week I learned
-
-
-We use the geekbot Slack plugin to automate our async weekly retrospective called [This Week I Learned](https://app.geekbot.com/dashboard/standup/113094/view). Participation is optional but encouraged. Every Friday at 9am on each team memeber's local time zone, geekbot asks "What did you learn this week?", "What's something you're looking forward to in the next week?", "Is there something puzzling you? If so, who can support you?". Answers are posted in the #ux_ci-cd Slack channel.
-
-## Resources
-
-### Career Development resources
-
-* [Career Development](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/handbook/people-group/learning-and-development/career-development)
-* [Learning & Development](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/handbook/people-group/learning-and-development)
-* [Learning Initiatives](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/handbook/people-group/learning-and-development/learning-initiatives)
 
 ### UX Definition of Done (UX DoD)
 
@@ -154,11 +158,14 @@ You can add the following checklist to an issue description to help illustrate t
 
 ```
 
-## Strategic counterparts
+### This week I learned
 
-* [Product Marketing Managers](/handbook/marketing/brand-and-product-marketing/product-and-solution-marketing/core-product-marketing/)
-* [Analyst Relations](/handbook/marketing/brand-and-product-marketing/product-and-solution-marketing/analyst-relations/)
-* [Customer Success](/handbook/customer-success/)
-* [Verify stage counterparts](/handbook/product/categories/#verify-stage)
-* [Package stage counterparts](/handbook/product/categories/#package-stage)
-* [Release stage counterparts](/handbook/product/categories/#release-stage)
+We use the geekbot Slack plugin to automate our async weekly retrospective called [This Week I Learned](https://app.geekbot.com/dashboard/standup/113094/view). Participation is optional but encouraged. Every Friday at 9am on each team memeber's local time zone, geekbot asks "What did you learn this week?", "What's something you're looking forward to in the next week?", "Is there something puzzling you? If so, who can support you?". Answers are posted in the #ux_ci-cd Slack channel.
+
+## Career Development
+
+### Resources
+
+* [Career Development](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/handbook/people-group/learning-and-development/career-development)
+* [Learning & Development](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/handbook/people-group/learning-and-development)
+* [Learning Initiatives](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/handbook/people-group/learning-and-development/learning-initiatives)
