Remove the Verify, Package and Release UX pages

--- a/development/ops/verify/index.html.md.erb
+++ b/development/ops/verify/index.html.md.erb
@@ -32,7 +32,7 @@ The Verify stage is made up of 5 groups:
 
 ## UX Strategy
 
-For of our UX Vision and Strategy, take a look at the [Verify UX Strategy](/handbook/product/ux/stage-group-ux-strategy/verify/) page.
+Coming soon.
 
 ### Jobs to be done (JTBD)
 
