--- a/development/enablement/data_stores/database/postgresql-upgrade-cadence.html.md.erb
+++ b/development/enablement/data_stores/database/postgresql-upgrade-cadence.html.md.erb
@@ -22,7 +22,7 @@ Starting with GitLab 16.0, we follow a yearly upgrade cadence for PostgreSQL:
    - In GitLab 15.0 [we have announced the deprecation of PostgreSQL 12](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/87016) (to be removed in GitLab 16.0).
    - In GitLab 16.0, we will announce the deprecation of PostgreSQL 13 (to be removed in GitLab 17.0).
 
-1. GitLab.com will be upgrading to the next major version every year during Q4. Our infrastructure will be preparing the upgrade in Q3 of every year, and execute the upgrade during Q4. In 2022, we plan to upgrade GitLab.com to PostgreSQL 13 in early Q4.
+1. GitLab.com will be upgrading to the next major version every year during Q4. Our infrastructure will be preparing the upgrade in Q3 of every year, and execute the upgrade during Q4. However, in 2023, we plan to upgrade GitLab.com to PostgreSQL 14 in early Q2.
 
 1. Optional support for the next major PG version in Omnibus and charts will be tested and validated with the release of each major version of GitLab. The next major PostgreSQL version will become available between `.0` major version and `.4` minor version, and then will become the default for fresh installations in the middle of the release cycle (\~ minor version `.6`). For example:
 
@@ -36,8 +36,8 @@ At a glance:
 | GitLab Version | Minimum Supported Version | Optionally Supported Version | Omnibus Default (Fresh installs) | Release notes | GitLab.com |
 |----------------|---------------------------|------------------------------|-----------------|---------------|------------|
 |     **15.0**       |         **PG12**              |           **PG13**               |      **PG13**       | Support for PG12 will be removed in 16.0| |
-| | | | | | Upgrade to PG13 early Q2 2023 |
+| | | | | | Upgrade to PG14 early Q2 2023 |
 |     **16.0**      |         **PG13**              |           **PG14**               |      PG13       | Support for PG14 will be added to omnibus and charts between 16.0 and 16.4<br />Support for PG13 will be removed in 17.0 | |
-|     16.6       |         PG13              |           PG14               |      **PG14**       | | Upgrade to PG14 early Q4 2023 |
+|     16.6       |         PG13              |           PG14               |      **PG14**       | | |
 |     **17.0**      |         **PG14**              |           **PG15**               |      PG14       | Support for PG15 will be added to omnibus and charts between 17.0 and 17.4<br />Support for PG14 will be removed in 18.0 | |
 |     17.6       |         PG14              |           PG15               |      **PG15**       | | Upgrade to PG15 early Q4 2024 |
