Add the instruction to access Postfacto

--- a/customer-success/solutions-architects/sa-practices/sa-retrospective-feedback/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/sa-retrospective-feedback/index.html.md.erb
@@ -42,17 +42,19 @@ Retrospective feedback sessions should ideally consider 3 areas:
 
 1. "It wasn't so great that..." >> Red
 
-The Solution Architecture team utilizes Postfacto as the main technology for agile retrospective feedback sessions. This is a digital whiteboard tool. The GitLab SA team has configured and implemented it internally. We run private retros which generally are password protected for teams. This postfacto internal session is hosted within our internal environment and are not publically accessable. Since it is an internally hosted solution, it is available to all internal GitLab teams and not only restricted to the SA team.
+The Solution Architecture team utilizes Postfacto as the main technology for agile retrospective feedback sessions. This is a digital whiteboard tool. The GitLab SA team has configured and implemented it internally. We run private retros which generally are password protected for teams. This Postfacto internal session is hosted within our internal environment and are not publically accessable. Since it is an internally hosted solution, it is available to all internal GitLab teams and not only restricted to the SA team.
 
-**Note: We need a reference on how to access.** 
-
-## Access instructions for our internal postfacto instance:
+## Access instructions for our internal Postfacto instance:
 
 
-### How can I become an admin user in postfacto:
+### How can I host a retrospective feedback session with Postfacto:
 
+The summary steps are as follows:
+1. Use the Postfacto account to log in to the Postfacto panel.
+1. Create a retro for the retrospective feedback session you plan to host.
+1. Share the retro URL and the password with the participants before the retrospective feedback session.
 
-**[WIP]** Toshi Ito to update
+For details, please refer to [this document](https://docs.google.com/document/d/1C3f6CbIOXh1P-ViXydk0JkozVO6Znz2GQAZCOwx011Q/edit?usp=sharing) (Internal members only).
 
 
 ## What are the roles during an agile retrospective feedback session?
@@ -82,21 +84,21 @@ We encourage that SA Leaders execute retros on a regular basis proactively. Howe
 
 The following activities are required to hold a retrospective session:
 
-1. A postfacto session with an URL and password (assigned during retro configuration)
+1. A Postfacto session with an URL and password (assigned during retro configuration)
 
 1. A calendar invite with the access to the retro session
 
 1. Optionally: a meeting notes document to record actions from the retro
 
-It is recommended to create a new retro board ahead of time by setting a name and chosing an URL. This will allow participants to start providing feedback in the postfacto tool ahead of time by adding retro items to each column for discussion. During that time team members are also encouraged to start voting if they feel strongly about already raised insights/suggestions (by clicking on the heart icon).
+It is recommended to create a new retro board ahead of time by setting a name and chosing an URL. This will allow participants to start providing feedback in the Postfacto tool ahead of time by adding retro items to each column for discussion. During that time team members are also encouraged to start voting if they feel strongly about already raised insights/suggestions (by clicking on the heart icon).
 
 ### How do I start and end a retro session?
 
 Given the nature of retros are considering opportunities to celebrate improvements ("Happy"), or trying to obtain more clarity around specific topics ("Wondering") or suggest opportunities for improvement ("Sad?"), those are the discussion columns within the retro board. It is suggested to start by picking a first retro item randomly but considering the number of votes of hearts. The retro host is keeping an eye on the retro time-frame which has a 5-minute timer in the retro item (can be configured).
 
-The guide for the retro item discussion also requires to add actions to improve teamwork. The team needs to nominate a team member to capture actions in either the postfacto retro tool (at the bottom of the UI) or in a seperate team meeting notes document.
+The guide for the retro item discussion also requires to add actions to improve teamwork. The team needs to nominate a team member to capture actions in either the Postfacto retro tool (at the bottom of the UI) or in a seperate team meeting notes document.
 
-The community around the open-source postfacto technology and its partners/collaborators have also built this blog [**"How to Run a Really Good Retrospective"**](https://tanzu.vmware.com/content/built-to-adapt/how-to-run-a-really-good-retrospective) for further guidance.
+The community around the open-source Postfacto technology and its partners/collaborators have also built this blog [**"How to Run a Really Good Retrospective"**](https://tanzu.vmware.com/content/built-to-adapt/how-to-run-a-really-good-retrospective) for further guidance.
 
 **Important note:** The retro time-frame should not be more than 5-minutes per item, as a result of that and for an effective discussion, the participants do not need to go into extensive descriptions "why" that particular item is critical nor into "trying to identify" a solution. The idea for the discussion is to quickly reflect and suggest a best next step or an action. The action then will become a means to identify a solution.
 
