Stefania sa improvements - fixing typos & broken links

--- a/customer-success/solutions-architects/tools-and-resources/index.html.md.erb
+++ b/customer-success/solutions-architects/tools-and-resources/index.html.md.erb
@@ -28,7 +28,7 @@ Proof of Value (POV), formerly known as Proof of Concept, is conducted during th
 
 Paid customers must set up a new namespace on SaaS when trialing Ultimate.  There are two primary reasons for this: 
 
-1. some paid features are not available in a trial, so a customer might lose functionality they had been using if a trial license is applied
+1. Some paid features are not available in a trial, so a customer might lose functionality they had been using if a trial license is applied
 2. GitLab does not have an appropriate mechanism for applying and reverting a trial license on SaaS without the namespace potentially being reverted to free when the trial expires ([see issue](https://gitlab.com/gitlab-org/gitlab/-/issues/12186))
 
 Both situations put customer production GitLab usage at risk if a trial is applied to the SaaS namespace.
@@ -53,16 +53,15 @@ New KB Articles can be added to the project by:
 
 - Creating a new issue directly from the project
 - Reacting to a Slack post in \#cs-questions or \#solutions-architects with the :kb: ![kb.jpg](./kb.jpg) emoji which will trigger a workflow that
-    - prompts the user with a Slack form to provide a title for the KB issue entry. This needs to be completed within 1 minute
-    - creates a KB Article in the CS Knowlege Base project and then posts a link to the issue in the Slack thread
+    - Prompts the user with a Slack form to provide a title for the KB issue entry. This needs to be completed within 1 minute
+    - Creates a KB Article in the CS Knowlege Base project and then posts a link to the issue in the Slack thread
 
 ### Product Releases
 
-Solution architects have to keep up the pace of the GitLab monthly product releases to position feature sets and capabilities for the prospect and customer needs while demostrating the market leading position. 
+Solution Architects have to keep up the pace of the GitLab monthly product releases to position feature sets and capabilities for the prospect and customer needs while demonstrating the market leading position. 
 
 Following links provide product release information to assist in tehnical discussions and technical evaluation. 
 
-- View [Product Release Updates](/handbook/marketing/brand-and-product-marketing/product-and-solution-marketing/release-updates/) for enablement on new features in recent releases
 - [Upcoming Releases](https://about.gitlab.com/upcoming-releases/)
 - [Previous Releases](https://gitlab.com/gitlab-org/gitlab/-/releases)
 - [Releases Blog](https://about.gitlab.com/releases/categories/releases/)
@@ -81,8 +80,7 @@ Solutions Architects frequently interact with customers for demos, presentations
 - [Rectangle](https://rectangleapp.com/) to quickly move and resize windows in macOS using keyboard shortcuts or snap areas
 - [Dark Reader](https://darkreader.org/) enables browser dark mode to better fit room lighting
 - [Postman](https://www.getpostman.com/) for API interaction
-- [Atom.io](https://atom.io/) lightweight IDE text editor
-    - [git-plus](https://atom.io/packages/git-plus) Package for atom to make commits and other git actions without the terminal
+- [Visual Studio Code](https://code.visualstudio.com/) lightweight IDE text editor
 
 
 #### Related macOS tips
@@ -105,7 +103,7 @@ No two presentations are the same and we often find ourselves mixing and matchin
 
 In order to facilitate an environment of learning and development, the Solutions Architect team has access to the [O’Reilly Learning Platform](https://learning.oreilly.com/home/). This education platform contains thousands of books, videos and live learning courses to assist SA’s with gaining the knowledge they need to stay competitive.
 
-More information can be found on the [Customer Success Education & Enablement page](/gitlab-com/www-gitlab-com/-/blob/master/handbook/customer-success/education-enablement).
+More information can be found on the [Customer Success Education & Enablement page](https://about.gitlab.com/handbook/customer-success/education-enablement/).
 
 ### Linkedin Learning Platform
 
