Add exception guidance to VSA qualification criteria

--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -31,7 +31,7 @@ Where applicable, GitLab account teams should assist prospects and customers by 
 
 ### Qualify
 
-Value stream assessments require a non-trivial investment of time by both the GitLab field teams and our prospects and customers. To ensure the appropriate return on this investment of time, the opportunities should meet the following criteria:
+Value stream assessments require a non-trivial investment of time by both the GitLab field teams and our prospects and customers. To ensure the appropriate return on this investment of time, the opportunities should meet the following criteria, and if not, please give any justification for why an exception should be made:
 
 - We have a strong relationship with an executive sponsor
 - The opportunity has a Net ARR value of over $500k
