--- a/development/dev/create/code-review/index.html.md.erb
+++ b/development/dev/create/code-review/index.html.md.erb
@@ -95,6 +95,8 @@ experience = f(perceived performance, task completion)
 
 In addition to the above dashboard, here are search links to ensure our MRs and Issues have the correct types:
 
+[Source](https://app.periscopedata.com/app/gitlab/786869/Code-Review-BE:Development-Metrics?widget=15814629&udv=1316736)
+
 <% if ENV['PERISCOPE_EMBED_API_KEY'] %>
   <div>
     <embed width="100%" height="150" src="<%= signed_periscope_url(dashboard: 786869, chart: 15814629, embed: 'v2') %>">
