--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -347,7 +347,7 @@ Schedule for Docs project maintenance tasks:
 - February, 2023: [Jon Glassman]
 - March, 2023: [Marcin Sędłak-Jakubowski]
 - April, 2023: [Lorena Ciutacu]
-- May, 2023: [Ashraf Khamis]
+- May, 2023: [Fiona Neill]
 
 ## Reviews
 
