Add video walkthrough to the SA retrospective handbook page

--- a/customer-success/solutions-architects/sa-practices/sa-retrospective-feedback/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/sa-retrospective-feedback/index.html.md.erb
@@ -56,6 +56,10 @@ The summary steps are as follows:
 
 For details, please refer to [this document](https://docs.google.com/document/d/1C3f6CbIOXh1P-ViXydk0JkozVO6Znz2GQAZCOwx011Q/edit?usp=sharing) (Internal members only).
 
+A walk-through of setting up a new restrospective can be found in the video below.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NhZRkpmGVsk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 
 ## What are the roles during an agile retrospective feedback session?
 
