Add both compliance youtube playlists

--- a/development/sec/govern/compliance/index.html.md.erb
+++ b/development/sec/govern/compliance/index.html.md.erb
@@ -102,7 +102,7 @@ The issue verification should be done by someone else other than the MR author. 
 During the `workflow::verification` process, we determine whether the Issue requires a demo. If unsure, work with PM to determine if a demo is required. Demos are great for showcasing progress and help users quickly understand how to use a features and its benefits. Our process for this is similar to [Single Engineer Groups Demo](https://about.gitlab.com/handbook/engineering/demos/#single-engineer-groups-demo):
 
 - Record a video on your computer or via Zoom livestream of the working software. You can also use [loom](https://about.gitlab.com/handbook/tools-and-tips/other-apps/#loom) for recording demos.
-- Upload to the [GitLab Unfiltered Channel](https://www.youtube.com/channel/UCMtZ0sc1HHNtGGWZFDRTh5A) and add to the [Compliance Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0Kq7_yBKIYHi8qvCWeU0Q3yH)
+- Upload to the [GitLab Unfiltered Channel](https://www.youtube.com/channel/UCMtZ0sc1HHNtGGWZFDRTh5A) and add to the [Compliance Group - Product Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KqWds1BN41IJxLd1AvpZxGu)
 - Post the YouTube link to the appropriate Slack channel and in the Issue
 
 ### Release posts
@@ -144,4 +144,6 @@ The following people are permanent members of the group:
 * Issue boards
   * [Build board](https://gitlab.com/groups/gitlab-org/-/boards/1305010)
   * [Planning board](https://gitlab.com/groups/gitlab-org/-/boards/4657720)
-* [Compliance group playlist on GitLab Unfiltered channel](https://www.youtube.com/playlist?list=PL05JrBw4t0Kq7_yBKIYHi8qvCWeU0Q3yH)
+* Compliance group playlists on GitLab Unfiltered channel
+  * [Product](https://www.youtube.com/playlist?list=PL05JrBw4t0KqWds1BN41IJxLd1AvpZxGu)
+  * [Meetings](https://www.youtube.com/playlist?list=PL05JrBw4t0Kq7_yBKIYHi8qvCWeU0Q3yH)
